Added default, recommended, recommended-typescript and recommended-jsx config. Default config is an alias of recommended config.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslintconfig",
     "lint"
   ],
-  "main": "default-config.js",
+  "main": "default.js",
   "directories": {
     "test": "tests"
   },
