--- a/package.json
+++ b/package.json
@@ -30,5 +30,19 @@
     "eslint-config-standard-jsx": ">=10",
     "eslint-config-standard-with-typescript": ">=20",
     "eslint-plugin-jsx-a11y": ">=6.4.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
+    "@babel/preset-typescript": "^7.13.0",
+    "@babel/register": "^7.13.16",
+    "@cucumber/cucumber": "^7.1",
+    "@cucumber/pretty-formatter": "*",
+    "@types/chai": "^4.2.16",
+    "@types/eslint": "^7.2.10",
+    "@types/fs-extra": "^9.0.11",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "chai": "^4.3.4",
+    "fs-extra": "^9.1.0"
   }
 }
