--- a/package.json
+++ b/package.json
@@ -51,17 +51,17 @@
     "eslint-plugin-jsx-a11y": ">=6.4.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.13.8",
-    "@babel/preset-typescript": "^7.13.0",
-    "@babel/register": "^7.13.16",
-    "@cucumber/cucumber": "^7.1",
-    "@cucumber/pretty-formatter": "*",
-    "@types/chai": "^4.2.16",
-    "@types/eslint": "^7.2.10",
-    "@types/fs-extra": "^9.0.11",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/register": "^7.14.5",
+    "@cucumber/cucumber": "^7.3",
+    "@cucumber/pretty-formatter": "^1.0.0-alpha.1",
+    "@types/chai": "^4.2.21",
+    "@types/eslint": "^7.28.0",
+    "@types/fs-extra": "^9.0.12",
+    "@typescript-eslint/parser": "^4.29.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.3.4",
-    "fs-extra": "^9.1.0"
+    "fs-extra": "^10.0.0"
   }
 }
