--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@typescript-eslint/parser": "^4.29.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.3.4",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "typescript": "^4.3.5"
   }
 }
