--- a/package.json
+++ b/package.json
@@ -58,11 +58,10 @@
     "@cucumber/pretty-formatter": "^1.0.0-alpha.1",
     "@types/chai": "^4.2.21",
     "@types/eslint": "^7.28.0",
-    "@types/fs-extra": "^9.0.12",
+    "@types/node": "^17.0.12",
     "@typescript-eslint/parser": "^4.29.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.3.4",
-    "fs-extra": "^10.0.0",
     "typescript": "^4.3.5"
   }
 }
