--- a/package.json
+++ b/package.json
@@ -44,24 +44,24 @@
     "url": "https://paypal.me/joelposti"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": ">=5",
-    "eslint-config-standard": ">=16",
-    "eslint-config-standard-jsx": ">=10",
-    "eslint-config-standard-with-typescript": ">=20",
-    "eslint-plugin-jsx-a11y": ">=6.4.1"
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
-    "@babel/preset-typescript": "^7.16.7",
-    "@babel/register": "^7.16.9",
-    "@cucumber/cucumber": "^7.3",
-    "@cucumber/pretty-formatter": "^1.0.0-alpha.1",
-    "@types/chai": "^4.3.0",
-    "@types/eslint": "^8.4.1",
-    "@types/node": "^17.0.12",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.20.7",
+    "@babel/preset-typescript": "^7.18.6",
+    "@babel/register": "^7.18.9",
+    "@cucumber/cucumber": "^8.9.1",
+    "@cucumber/pretty-formatter": "^1.0.0",
+    "@types/chai": "^4.3.4",
+    "@types/eslint": "^8.4.10",
+    "@types/node": "^18.11.17",
+    "@typescript-eslint/parser": "^5.47.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "chai": "^4.3.5",
-    "typescript": "^4.5.5"
+    "chai": "^4.3.7",
+    "typescript": "^4.9.4"
   }
 }
