`response200/node-build` image no longer has its default user set as root. The intention is to run code in that container as an unprivileged user. However, getting `actions/checkout@v3` to work with an unprivileged user proved to be rather difficult because the user has no write permissions to `/__w/eslint-config/eslint-config` directory. For now, fall back to running code as root user in the container by specifying `container.options: --user root:root` in workflow files.

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     permissions:
       contents: write
     steps:
