--- a/.github/workflows/check-and-test-code.yml
+++ b/.github/workflows/check-and-test-code.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
@@ -23,6 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     needs: lint # Run after lint so that lint job has an opportunity to fill npm cache.
     steps:
       - uses: actions/checkout@v3
@@ -37,6 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     needs: lint # Run after lint so that lint job has an opportunity to fill npm cache.
     steps:
       - uses: actions/checkout@v3
