--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     steps:
       - uses: actions/checkout@v3
         with:
@@ -22,6 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     needs: audit
     steps:
       - uses: actions/checkout@v3
@@ -38,6 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     needs: lint # Run after lint so that audit job has an opportunity to fill npm cache.
     steps:
       - uses: actions/checkout@v3
@@ -54,6 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     needs: lint # Run after lint so that audit job has an opportunity to fill npm cache.
     steps:
       - uses: actions/checkout@v3
@@ -70,6 +74,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: response200/node-build:latest
+      options: --user root:root
     needs: [test, type-check]
     permissions:
       contents: write
