--- a/package.json
+++ b/package.json
@@ -44,23 +44,21 @@
     "url": "https://paypal.me/joelposti"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "eslint-config-standard": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "eslint-config-love": "^47.0.0",
+    "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-config-standard-with-typescript": "^26.0.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1"
+    "eslint-plugin-jsx-a11y": "^6.9.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.20.7",
-    "@babel/preset-typescript": "^7.18.6",
-    "@babel/register": "^7.18.9",
-    "@cucumber/cucumber": "^8.9.1",
-    "@cucumber/pretty-formatter": "^1.0.0",
-    "@types/chai": "^4.3.4",
-    "@types/eslint": "^8.4.10",
-    "@types/node": "^18.11.17",
-    "@typescript-eslint/parser": "^5.47.0",
-    "chai": "^4.3.7",
-    "typescript": "^4.9.4"
+    "@babel/plugin-transform-modules-commonjs": "^7.24.8",
+    "@babel/preset-typescript": "^7.24.7",
+    "@babel/register": "^7.24.6",
+    "@cucumber/cucumber": "^10.8.0",
+    "@cucumber/pretty-formatter": "^1.0.1",
+    "@types/eslint": "^9.6.0",
+    "@types/node": "^20.14.12",
+    "@typescript-eslint/parser": "^7.17.0",
+    "typescript": "^5.5.4"
   }
 }
