--- a/.github/workflows/check-and-test-code.yml
+++ b/.github/workflows/check-and-test-code.yml
@@ -18,6 +18,12 @@ jobs:
           path: ~/.npm
           key: npm-dependencies-${{ hashFiles('**/package-lock.json') }}
       - run: npm ci --cache ~/.npm --prefer-offline --ignore-scripts --no-fund
+      # Fix `fatal: detected dubious ownership in repository at '/__w/eslint-config/eslint-config'`
+      # error that occurs during this step. Since version 2.35.2 `git` has not
+      # liked that the git directory is owned by other user than the one
+      # performing git operations in the directory. Change the owner of the
+      # directory to be the same user as these steps are run as.
+      - run: chown root:root "$GITHUB_WORKSPACE"
       - run: scripts/lint.sh paths .
 
   test:
@@ -33,6 +39,7 @@ jobs:
           path: ~/.npm
           key: npm-dependencies-${{ hashFiles('**/package-lock.json') }}
       - run: npm ci --cache ~/.npm --prefer-offline --ignore-scripts --no-fund
+      - run: chown root:root "$GITHUB_WORKSPACE"
       - run: scripts/test.sh
 
   type-check:
@@ -48,4 +55,5 @@ jobs:
           path: ~/.npm
           key: npm-dependencies-${{ hashFiles('**/package-lock.json') }}
       - run: npm ci --cache ~/.npm --prefer-offline --ignore-scripts --no-fund
+      - run: chown root:root "$GITHUB_WORKSPACE"
       - run: scripts/type-check.sh
