--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,12 @@ jobs:
           path: ~/.npm
           key: npm-dependencies-${{ hashFiles('**/package-lock.json') }}
       - run: npm ci --cache ~/.npm --prefer-offline --ignore-scripts --no-fund
+      # Fix `fatal: detected dubious ownership in repository at '/__w/eslint-config/eslint-config'`
+      # error that occurs during this step. Since version 2.35.2 `git` has not
+      # liked that the git directory is owned by other user than the one
+      # performing git operations in the directory. Change the owner of the
+      # directory to be the same user as these steps are run as.
+      - run: chown root:root "$GITHUB_WORKSPACE"
       - run: scripts/lint.sh paths .
 
   test:
@@ -51,6 +57,7 @@ jobs:
           path: ~/.npm
           key: npm-dependencies-${{ hashFiles('**/package-lock.json') }}
       - run: npm ci --cache ~/.npm --prefer-offline --ignore-scripts --no-fund
+      - run: chown root:root "$GITHUB_WORKSPACE"
       - run: scripts/test.sh
 
   type-check:
@@ -68,6 +75,7 @@ jobs:
           path: ~/.npm
           key: npm-dependencies-${{ hashFiles('**/package-lock.json') }}
       - run: npm ci --cache ~/.npm --prefer-offline --ignore-scripts --no-fund
+      - run: chown root:root "$GITHUB_WORKSPACE"
       - run: scripts/type-check.sh
 
   release:
@@ -84,6 +92,7 @@ jobs:
           ref: ${{ github.event.inputs.rev }}
           # scripts/ci/release.sh depends on all git branches being fetched.
           fetch-depth: 0
+      - run: chown root:root "$GITHUB_WORKSPACE"
       - run: scripts/ci/release.sh '${{ github.event.inputs.rev }}' '${{ github.actor }}'
         env:
           TOKEN_FOR_PUBLISHING_NPM_PACKAGES: ${{ secrets.TOKEN_FOR_PUBLISHING_NPM_PACKAGES }}
