--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/response200/eslint-config",
   "repository": {
     "type": "git",
-    "url": "https://github.com/response200/eslint-config.git"
+    "url": "git+https://github.com/response200/eslint-config.git"
   },
   "bugs": {
     "url": "https://github.com/response200/eslint-config/issues"
