Updated eslint-plugin-jsx-a11y 6.9.0 to 6.10.2 and moved it from `peerDependencies` to `dependencies`. It seems with ESLint 9 the convention is to put dependency shareable configs to `dependencies`.
Removed all other peer dependencies. They were replaced by adding neostandard to `dependencies`.
* Neostandard is a spiritual successor to standard and eslint-config-standard. Eslint-config-standard is no longer maintained and lacks support for ESLint 9.
* Eslint-config-standard-jsx is no longer maintained and lacks support for ESLint 9. Neostandard provides a very similar JSX ruleset. Thus neostandard replaces eslint-config-standard-jsx.
* Eslint-config-love (formerly known as eslint-config-standard-with-typescript) was removed from dependencies, because it is no longer needed. Neostandard provides a very similar TypeScript ruleset.
* Neostandard has @typescript-eslint/eslint-plugin as a transitive dependency thus it does not need to be explicitly defined in dependencies.

Added @eslint/js to dependencies. It provides ESLint 9's built-in JavaScript rulesets.

Added eslint with `>=9` version range to `peerDependencies`. This is recommended by [ESLint's documentation on shareable configs](https://eslint.org/docs/latest/extend/shareable-configs#publishing-a-shareable-config).

--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "url": "https://paypal.me/joelposti"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "eslint-config-love": "^47.0.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-jsx": "^11.0.0",
-    "eslint-plugin-jsx-a11y": "^6.9.0"
+    "eslint": ">=9"
+  },
+  "dependencies": {
+    "@eslint/js": "^9.26.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "neostandard": "^0.12.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.27.1",
@@ -56,9 +57,7 @@
     "@babel/register": "^7.27.1",
     "@cucumber/cucumber": "^11.2.0",
     "@cucumber/pretty-formatter": "^1.0.1",
-    "@types/eslint": "^9.6.0",
     "@types/node": "^20.14.12",
-    "@typescript-eslint/parser": "^7.17.0",
     "typescript": "^5.8.3"
   }
 }
