Converted recommended.js, recommended-jsx.js and recommended-typescript.js to ESLint 9's ‘flat config’ format. Removed explicit rule definitions that were no longer needed. Added necessary rule definitions in order to be as compatible as possible with version 3.0.0 rulesets.
Replaced .eslintrc.js with ESLint 9-compatible eslint.config.mjs configuration file. Removed .eslintignore because files to ignore when linting are now defined in eslint.config.mjs.

--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "eslintconfig",
     "lint"
   ],
-  "main": "default.js",
+  "main": "index.js",
   "bin": {
     "lint.sh": "scripts/lint.sh"
   },
   "files": [
     "default.js",
+    "index.js",
     "recommended.js",
     "recommended-jsx.js",
     "recommended-typescript.js",
