Added scripts/helpers/paths.sh to `files` in package.json.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "recommended-typescript.js",
     "scripts/lint.sh",
     "scripts/helpers/git.sh",
+    "scripts/helpers/paths.sh",
     "CHANGELOG.md",
     "LICENCE.md",
     "README.md",
